--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td><input type="email" name="email"/></td>
               </tr>
               <tr>
-                  <td>*Age</td>
+                  <td>Age</td>
                   <td>:</td>
                   <td><input type="number" name="age" min="0"/></td>
                 </tr>
@@ -69,6 +69,8 @@
                         </tr>
 
           </table>
+
+          <a href="#" class="btn" onclick="clicked()">Print</a>
         </div>
     </div>
     <script  src="js/index.js"></script>
