New project preparation

--- a/index.html
+++ b/index.html
@@ -8,73 +8,7 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <div class="wrapper">
-        <h1 id="title">Survey Form</h1>
-        <div class="form-wrapper">
-          <p id="description"Let us know if anything needs to be added in microverse course line :</p>
-          <br>
-          <form id="survey-form">
-            <table>
-              <tr>
-                <td><label id="name-label">*Name</label></td>
-                <td>:</td>
-                <td><input type="text" name="name" id="name" required="true" placeholder="Enter Full Name"/></td>
-              </tr>
-              <tr>
-                  <td><label id="email-label">*Email</label></td>
-                  <td>:</td>
-                  <td><input type="email" name="email"  id="email" required="true" placeholder="Enter Email address"/></td>
-                </tr>
-                <tr>
-                    <td><label id="number-label">Age</label></td>
-                    <td>:</td>
-                    <td><input type="number"  id="number" name="age" min="0" max="110" placeholder="Enter Your Age in Number"/></td>
-                  </tr>
-                  <tr>
-                      <td>Which one best describes your role ?</td>
-                      <td>:</td>
-                      <td>
-                        <select name="role" id="dropdown">
-                          <option value="">Select any option from below</option>
-                          <option value="Student">Student</option>
-                          <option value="Software Developer">Developer</option>
-                        </select>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td>*How likely that you're going to recommend microverse to your friends ?</td>
-                        <td>:</td>
-                        <td>
-                          <input type="radio" name="recommendation" value="1"/> Definitely <br>
-                          <input type="radio" name="recommendation" value="0"/> Maybe <br>
-                          <input type="radio" name="recommendation" value="-1"/> Definitely Not<br>
-                        </td>
-                      </tr>
-
-                      <tr>
-                          <td>*Things that should be added or improved in future</td>
-                          <td>:</td>
-                          <td>
-                            <input type="checkbox" name="suggestion" value="Front-End Development"/> Front-End Development <br>
-                            <input type="checkbox" name="suggestion" value="Back-End Development"/> Back-End Development  <br>
-                            <input type="checkbox" name="suggestion" value="System Software Development"/> System Software Development <br>
-                            <input type="checkbox" name="suggestion" value="Data Science"/> Data Science <br>
-                          </td>
-                        </tr>
-                        <tr>
-                            <td>*Any sggestion or comments ? </td>
-                            <td>:</td>
-                            <td>
-                            <textarea name="comment"></textarea>
-                            </td>
-                          </tr>
-
-          </table>
-
-          <input type="submit" id="submit" class="btn" onclick="clicked()" value="Print"/>
-          </form>
-        </div>
-    </div>
+   <p>Hello</p>
     <script  src="js/index.js"></script>
   </body>
 </html>
