up to story 3 complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-   <p>Hello</p>
+    <header id="header">
+      <img src="https://thumbs.mic.com/NGE1MGNjNWY0ZSMvaXk2UHBxOU44Q1RkRVRVemRfdExDdVRaUFpBPS8xNXgwOjEwMzB4NTcxLzgwMHg0NTAvZmlsdGVyczpmb3JtYXQoanBlZyk6cXVhbGl0eSg4MCkvaHR0cHM6Ly9zMy5hbWF6b25hd3MuY29tL3BvbGljeW1pYy1pbWFnZXMvaW4za2diOXZwdWtncXdudHlldWZwZDB3eTkyc290bjF1cXVrNG9nMm9ud3V2dTlpbGJkcTlnZXR1YXR5aXIwaC5qcGc.jpg" id="header-img" alt="Product Image">
+      <nav id="nav-bar">
+        <ul>
+          <li><a href="#">Description</a></li>
+          <li><a href="#">Specifications</a></li>
+          <li><a href="#">Reviews</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
