--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
       <img src="https://thumbs.mic.com/NGE1MGNjNWY0ZSMvaXk2UHBxOU44Q1RkRVRVemRfdExDdVRaUFpBPS8xNXgwOjEwMzB4NTcxLzgwMHg0NTAvZmlsdGVyczpmb3JtYXQoanBlZyk6cXVhbGl0eSg4MCkvaHR0cHM6Ly9zMy5hbWF6b25hd3MuY29tL3BvbGljeW1pYy1pbWFnZXMvaW4za2diOXZwdWtncXdudHlldWZwZDB3eTkyc290bjF1cXVrNG9nMm9ud3V2dTlpbGJkcTlnZXR1YXR5aXIwaC5qcGc.jpg" id="header-img" alt="Product Image">
       <nav id="nav-bar">
         <ul>
-          <li><a href="#">Description</a></li>
-          <li><a href="#">Specifications</a></li>
-          <li><a href="#">Reviews</a></li>
+          <li><a href="#header" class="nav-link">Description</a> </li>
+          <li><a href="#header" class="nav-link">Specifications</a></li>
+          <li><a href="#header" class="nav-link">Reviews</a></li>
         </ul>
       </nav>
 
+<video src="<iframe width="1549" height="486" src="https://www.youtube.com/embed/hMcg91wJNf0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>"></video>
+
     </header>
+
+
 
     <script  src="js/index.js"></script>
   </body>
