From 7 to 11 complete

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         </ul>
       </nav>
 
-<video src="<iframe width="1549" height="486" src="https://www.youtube.com/embed/hMcg91wJNf0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>"></video>
+    <video src="<iframe width="1549" height="486" src="https://www.youtube.com/embed/hMcg91wJNf0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>"></video>
 
     </header>
+    <form id="form">
+      <input type="email" id="email" placeholder="Please write your Email Address"/>
+      <input type="submit" value="Submit"/>
+    </form>
 
 
 
