--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <header id="header">
+    
+  <header id="header">
       <img src="https://thumbs.mic.com/NGE1MGNjNWY0ZSMvaXk2UHBxOU44Q1RkRVRVemRfdExDdVRaUFpBPS8xNXgwOjEwMzB4NTcxLzgwMHg0NTAvZmlsdGVyczpmb3JtYXQoanBlZyk6cXVhbGl0eSg4MCkvaHR0cHM6Ly9zMy5hbWF6b25hd3MuY29tL3BvbGljeW1pYy1pbWFnZXMvaW4za2diOXZwdWtncXdudHlldWZwZDB3eTkyc290bjF1cXVrNG9nMm9ud3V2dTlpbGJkcTlnZXR1YXR5aXIwaC5qcGc.jpg" id="header-img" alt="Product Image">
       <nav id="nav-bar">
         <ul>
@@ -21,9 +22,9 @@
     <video src="<iframe width="1549" height="486" src="https://www.youtube.com/embed/hMcg91wJNf0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>"></video>
 
     </header>
-    <form id="form">
-      <input type="email" id="email" placeholder="Please write your Email Address"/>
-      <input type="submit" value="Submit"/>
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <input type="email" id="email" placeholder="Please write your Email Address" name="email"/>
+      <input  type="submit" value="Submit" id="submit"/>
     </form>
 
 
