solved upto no. 5 issue

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    
+    <div id="welcome-section">
+      <h1>Welcome to my portfolio</h1>
+    </div>
+    <div id="projects">
+        <div class="project-tile">
+          <img src="" alt="Project Snapshot"/>
+          <a href="https://github.com/wasifAL/fcc-test-suite-template/" >Project Title</a>
+          <p>Projects Description</p>
+        </div>
+    </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
