--- a/index.html
+++ b/index.html
@@ -3,17 +3,47 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+   
+    <style>
+
+      #navbar{
+        position: fixed;
+        top: 0;
+      }
+      #welcome-section{
+          height: 100vh;
+          text-align: center;
+        }
+      img {
+        height: 100px;
+        width: auto;
+      }
+      @media  only screen and (max-width: 500px){
+        body{
+          background-color: #b8c1d1;
+        }
+        
+      }
+    </style>
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <nav id="navbar">
+      <ul>
+        <li><a href="#welcome-section">Personal Portfolio</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+      
+    </nav>
     <div id="welcome-section">
       <h1>Welcome to my portfolio</h1>
+      <a href="github.com/DanielMitiku" id="profile-link" target="_blank">Git Hub Profile</a>
     </div>
     <div id="projects">
         <div class="project-tile">
-          <img src="" alt="Project Snapshot"/>
+          <img src="https://cdn2.itpro.co.uk/sites/itpro/files/styles/article_main_wide_image/public/2017/04/project_management_0.jpg?itok=8Uny5SVW" alt="Project Snapshot"/>
+        </br>
           <a href="https://github.com/wasifAL/fcc-test-suite-template/" >Project Title</a>
           <p>Projects Description</p>
         </div>
